--- a/vim/.vim/.skeleton.html
+++ b/vim/.vim/.skeleton.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title></title>
-    </head>
-    <body>
-    </body>
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+	</head>
+	<body>
+	</body>
 </html>
